--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <nav>
     <a href="#">Home</a>
-    <a href="#">Contexto historico</a>
-    <a href="#">Caracteristicas</a>
-    <a href="#">Artistas</a>
-    <a href="#">Obras</a>
+    <a href="#contexto">Contexto historico</a>
+    <a href="#caracteristicas">Caracteristicas</a>
+    <a href="#artistas">Artistas</a>
+    <a href="#obra">Obras</a>
 </nav>
 
 </header>
@@ -27,9 +27,9 @@
 <section class="home" >
 
    <div class="conteudo-home">
-    <h1>Culinaria Africana: Fufu</h1>
+    <h1>De Stijl</h1>
     <p>
-        Mais do que um simples costume, uma ancestralidade e cultura Africana!
+        No caos da guerra, o De Stijl trouxe equilíbrio geométrico.
     </p>
    </div> 
 
@@ -41,7 +41,7 @@
 
 <!-- ============================================================================= HISTORICO ===================================================================================== -->
 
-<section class="historico" >
+<section class="historico" id="contexto">
 
 <div class="img-historico">
     <img class="fufu" src="./image/obra3.jpg" alt="" height="640vh" width="900px" >
@@ -49,9 +49,17 @@
 
 <div class="historia">
 
-    <h1>Contexto históico</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum eius non explicabo vel iste voluptatem dolore maiores vitae. Laudantium eaque, enim ex maiores, quos iste quia veniam nisi excepturi rerum repellendus neque odio suscipit, unde quas expedita at consequuntur sequi! Cumque mollitia non blanditiis, quis facilis minus, eaque dicta atque voluptate dignissimos doloremque vitae ipsum porro provident ducimus cum suscipit exercitationem sequi debitis ea ut necessitatibus fugit nesciunt. Commodi rem corporis cupiditate praesentium aliquam, placeat autem dolores reiciendis eligendi sed?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium molestias dolorum aliquid suscipit, dolor quisquam optio dolore repudiandae ipsa sed itaque eveniet omnis nostrum consequuntur, illo dolores. Odio aliquam, nobis in iure ipsa aperiam architecto accusamus praesentium repellendus enim earum mollitia quo reprehenderit blanditiis obcaecati illum amet vel at optio!</p>
+    <h1>Contexto histórico</h1>
+    <p>
+    Período: surgiu em 1917, na Holanda, durante a Primeira Guerra Mundial.
+
+    Clima da época: a Europa estava devastada pela guerra. Muitos artistas buscavam uma linguagem universal, pura e racional, que pudesse trazer ordem, equilíbrio e paz em contraste com o caos da guerra.
+
+    Inspirações: ideias filosóficas e espirituais (teosofia), além do desejo de criar uma arte que fosse além das diferenças culturais, religiosas ou nacionais.
+
+    Proposta: simplificar ao máximo a arte, reduzindo tudo a formas geométricas básicas (principalmente quadrados e retângulos) e cores puras (primárias + preto, branco e cinza).
+
+    Manifestações: não ficou só na pintura — influenciou também a arquitetura, o design e o mobiliário, buscando uma estética integrada entre arte e vida cotidiana.</p>
 
 </div>
 
@@ -59,7 +67,7 @@
 
 <!-- ============================================================================= ARTISTA ===================================================================================== -->
 
-<section class="sessao2">
+<section class="sessao2" id="artistas">
 
 <!-- primeiro artista -->
 <div class="artistas">
@@ -73,8 +81,8 @@
 <!--  texto 1-->
 <div class="artista-texto">
     <h1>Piet</h1>
-    <p>Giannis Antetokounmpo (NBA)e o Fufu com Egusi Soup: Durante uma sessão tranquila de perguntas no X (antigo Twitter), Giannis declarou com orgulho que seu prato nigeriano favorito é “Fufu with Egusi Soup” Isso não foi apenas sobre sabor — ao escolher esse prato, ele reforçou sua conexão profunda com suas raízes nigerianas, mesmo sendo reconhecido mundialmente como “The Greek Freak” A menção ressoou fortemente entre os fãs, provocando reações cheias de orgulho e memes que celebravam essa doce conexão cultural Além disso, durante sua visita à Nigéria, Giannis foi 
-    registrado curtindo momentos em família ao redor de uma mesa com Fufu e Egusi Soup, um verdadeiro ritual de união e partilha</p>
+    <p>Pieter Cornelis Mondriaan, nasceu em Amersfoort, na Holanda, em 7 de março de 1872, iniciou sua carreira pintando paisagens, mas revolucionou a arte ao fundar o movimento De Stijl em 1917. Criou o neoplasticismo, baseado em linhas retas, ângulos de 90°, cores primárias e neutras, buscando ordem e equilíbrio após a Primeira Guerra. Em Nova Iorque, influenciado pelo jazz, produziu obras dinâmicas como Broadway Boogie Woogie, tornando-se referência central da arte abstrata do século XX. Faleceu em 1º de fevereiro de 1944, em Nova Iorque. Nos últimos anos, viveu imerso na arte abstrata e no ritmo da cidade. Sua morte encerrou uma trajetória que influenciou pintura, design, arquitetura e moda.
+</p>
     <a href="#piet">    
     <button  class="btn-obras" >Veja sua Obra</button>
     </a>
@@ -95,8 +103,9 @@
 <!--  texto 2-->
 <div class="artista-texto2">
     <h1>Kazimir Malevich</h1>
-    <p>Burna Boy e o Fufu No vídeo que circulou na internet, o cantor Burna Boy aparece amassando fufu com uma mulher, em um cenário informal nas ruas. O registro chama atenção por mostrar o gesto de preparo como algo natural e comunitário, reforçando o vínculo do artista com as raízes culturais da África Ocidental—mesmo em um ambiente cotidiano</p>
-  <button class="btn-obras" >Obra</button>
+    <p>Kazimir Severinovich Malevich nasceu em 1879, em Kiev, e criou o Suprematismo, uma das primeiras artes abstratas radicais. Em 1915, apresentou o “Quadrado Negro”, marco da ruptura com a arte figurativa. Enquanto o De Stijl, na Holanda, buscava ordem e harmonia universal com linhas retas e cores primárias, Malevich defendia a supremacia da sensação pura, usando formas geométricas simples para expressar o espírito humano e o infinito. Apesar de não integrar o De Stijl, suas ideias dialogavam com as de Mondrian e Theo van Doesburg, pois ambos queriam libertar a arte da imitação da natureza. Reprimido pelo regime soviético e acusado de formalismo, Malevich foi obrigado a abandonar a abstração. Morreu em 1935, em Leningrado, deixando um legado fundamental para a consolidação da arte abstrata ao lado do De Stijl.
+    </p>
+    <button class="btn-obras" >Obra</button>
 </div>
 
 
@@ -114,7 +123,8 @@
 <!--  texto 2-->
 <div class="artista-texto3">
     <h1>El Lissitzky</h1>
-    <p>Davido, um dos maiores astros do afrobeats, teve algumas experiências marcantes com fufu: Ele foi servido com “fufu e light soup” na casa do músico ganês Stonebwoy, preparada pela esposa dele, Dr. Louisa. Em outra ocasião, Davido foi visto saboreando fufu com light soup em seu quarto de hotel em Gana, acompanhado pelo músico Showboy. Ele demonstrou muita animação e chamou esse prato de sua “comida ganesa favorita” Um vídeo mostra Davido comendo fufu e light soup em um restaurante local em Accra como se fosse “um ganês comum”, e chegou a afirmar que fufu feito de mandioca pounded (amassada) é sua iguaria ganesa favorita</p>
+    <p>Lazar Markovich Lissitzky, nasceu em 23 de novembro de 1890, na cidade de Pochinok, artista, arquiteto, designer gráfico, tipógrafo e professor russo, foi um dos grandes nomes da vanguarda e do Suprematismo. Criador dos Proun (“Projetos para a Afirmação do Novo”), obras que uniam pintura, design e arquitetura, acreditava que a arte deveria dialogar com todas as áreas da vida. Para ele, o Proun era a estação entre a pintura e a arquitetura. Suas ideias se aproximavam do grupo De Stijl, compartilhando o desejo de uma linguagem visual universal, mas explorando formas mais dinâmicas e espaciais. Seu legado foi tornar a arte interdisciplinar, mostrando que pintura, design, arquitetura e tipografia poderiam transformar a sociedade. El Lissitzky faleceu em 30 de dezembro de 1941, em Moscou. Sua morte marcou o fim de uma trajetória visionária, mas seu legado interdisciplinar segue influente até hoje.
+</p>
   <button class="btn-obras" >Obra</button>
 </div>
 
@@ -127,7 +137,7 @@
 
 <!-- ============================================================================= OBRAS ===================================================================================== -->
 
-<section class="obra">
+<section class="obra" id="obra">
 
  <div class="obra-pai">   
   
